// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`example from README 1`] = `
Object {
  "Constructor": "dummy",
  "Options": Object {
    "ComponentForLoading": [Function],
    "ID": "component",
    "loaded": false,
  },
  "html": "
<!--if-->
<!--WithoutFlushLoader-->
<!--if-->
",
}
`;

exports[`example from README 2`] = `
Object {
  "Constructor": "dummy",
  "Options": Object {
    "ComponentForLoading": [Function],
    "ID": "component",
    "loaded": false,
  },
  "html": "
Loading...
<!--DynamicComponent-->
<!--if-->
<!--WithoutFlushLoader-->
<!--if-->
",
}
`;

exports[`renders correctly 1`] = `
Object {
  "Constructor": "WithoutFlushLoader",
  "Options": Object {
    "ID": "component",
    "delay": 100,
    "loadingComponent": [Function],
    "showLoader": false,
  },
  "html": "<!--if-->",
}
`;

exports[`renders correctly 2`] = `
Object {
  "Constructor": "WithoutFlushLoader",
  "Options": Object {
    "ID": "component",
    "delay": 100,
    "loadingComponent": [Function],
    "showLoader": true,
  },
  "html": "
Loading...
<!--DynamicComponent-->
<!--if-->
",
}
`;
